fixed spacing on top nav logo

--- a/assets/styles/layouts/_layout-topnav.scss
+++ b/assets/styles/layouts/_layout-topnav.scss
@@ -13,7 +13,7 @@
       color: $topnav-link-hover;
     }
     .icon-influx-logotype {
-      margin-left: -.8rem;
+      margin: 0 .9rem 0 .15rem;
     }
   }
 
